# svg.charts

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  license.txt  mypy.ini  pyproject.toml  pytest.ini  readme.txt  release.howto  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: conf.py  index.rst  license.txt  modules.rst  svg.charts.rst  svg.rst
newsfragments/: 30.bugfix.rst
svg/charts/: __init__.py  bar.css  bar.py  css.py  graph.css  graph.py  line.py  pie.css  pie.py  plot.css  plot.py  schedule.py  time_series.py  util.py
tests/: custom_graph.css  samples.py  source.csv  test_package.py  test_plot.py  test_samples.py  test_time_series.py  testing.rb
