[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "svg.charts"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Python SVG Charting Library"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"cssutils>=0.9.8a3",
	"python-dateutil>=2.0",
	"lxml>=2.0",
	"more_itertools>=6",
	"tempora>=1.3",
	'importlib_resources; python_version < "3.7"',
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/svg.charts"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6, != 8.1.1",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	"types-python-dateutil",
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[tool.setuptools_scm]
