[metadata]
name = svg.charts
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Python SVG Charting Library
long_description = file:README.rst
url = https://github.com/jaraco/svg.charts
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	cssutils>=0.9.8a3
	python-dateutil>=2.0
	lxml>=2.0
	more_itertools>=6
	tempora>=1.3
	importlib_resources; python_version < "3.7"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local
	types-python-dateutil

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
