[metadata]
name = svg.charts
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Python SVG Charting Library
long_description = file:README.rst
url = https://github.com/jaraco/svg.charts
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	cssutils>=0.9.8a3
	python-dateutil>=2.0
	lxml>=2.0
	more_itertools>=6
	tempora>=1.3
	importlib_resources; python_version < "3.7"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local
	types-python-dateutil

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
